Makes everything PP and adds states and decorative elements

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -5,7 +5,7 @@
   list-style: none;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 51px;
+    margin-bottom: 40px;
   }
 
   @media (min-width: @desktop-width) {
@@ -18,7 +18,7 @@
   margin-bottom: 10px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 31px;
+    margin-bottom: 40px;
   }
 
   @media (min-width: @desktop-width) {
@@ -50,7 +50,8 @@
     background-color: @red;
   }
 
-  &:hover::before {
+  &:hover::before,
+  &:focus::before {
     opacity: 0.6;
   }
 
@@ -61,6 +62,14 @@
   @media (min-width: @tablet-width) {
     .fontsize(20px);
     margin-bottom: 52px;
+
+    &::before {
+      top: 6px;
+      left: -7px;
+      width: 26px;
+      height: 26px;
+      margin-right: 18px;
+    }
   }
 
   @media (min-width: @desktop-width) {
