--- a/source/less/blocks/traveler-info.less
+++ b/source/less/blocks/traveler-info.less
@@ -12,7 +12,8 @@
   transform: translateY(-73%);
 
   @media (min-width: @tablet-width) {
-    left: 71px;
+    left: 73px;
+    margin-bottom: 12px;
   }
 
   @media (min-width: @desktop-width) {
