--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -14,7 +14,8 @@
   border: 0;
   border-radius: 25px;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: @special-yellow-dark;
   }
 
@@ -114,7 +115,8 @@
     line-height: 18px;
     background-color: @special-blue-light;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: @special-steelblue;
     }
 
@@ -136,7 +138,8 @@
     line-height: 20px;
     background-color: transparent;
 
-    &:hover {
+    &:hover,
+    &:focus {
       opacity: 0.6;
       background-color: transparent;
     }
@@ -153,7 +156,8 @@
     line-height: 20px;
     background-color: @special-darkblue;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: @special-darkblue-dark;
     }
 
@@ -169,13 +173,20 @@
     color: @basic-blue;
     background-color: @white;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: @white;
+      filter: drop-shadow(0 3px 6px fade(@black, 14%));
     }
 
     &:active {
       color: fade(@basic-blue, 30%);
       background-color: @special-yellow-faded;
+      filter: none;
+    }
+
+    @media (min-width: @tablet-width) {
+      padding: 18px 14px 12px;
     }
   }
 
@@ -222,7 +233,8 @@
     background-color: @white;
     border-radius: 4px;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: @white;
     }
 
@@ -244,7 +256,8 @@
     border-color: @basic-blue-light;
     border-radius: 4px 4px 0 0;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: @basic-blue-light;
     }
 
@@ -288,6 +301,24 @@
       right: 5px;
       width: 25px;
       height: 25px;
+    }
+
+    @media (min-width: @tablet-width) {
+      &::before {
+        top: 1px;
+        right: 2px;
+        width: 31px;
+        height: 31px;
+        .fontsize(31px);
+        letter-spacing: 0.09em;
+      }
+
+      &::after {
+        top: 6px;
+        right: 2px;
+        width: 22px;
+        height: 22px;
+      }
     }
   }
 }
