--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -131,6 +131,13 @@
     padding-right: 550px;
     padding-left: 124px;
   }
+
+  &--with-backlink {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .page-main__title {
@@ -155,6 +162,28 @@
 
 .page-main__back-link {
   display: none;
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    display: block;
+    padding-right: 59px;
+    font-weight: 700;
+    .fontsize(20px);
+    text-transform: uppercase;
+    color: @white;
+    .interactions-opacity();
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      right: -1px;
+      display: block;
+      width: 32px;
+      height: 16px;
+      background-color: @red;
+    }
+  }
 }
 
 // Inner pages
@@ -212,6 +241,8 @@
     }
 
     @media (min-width: @tablet-width) {
+      max-width: 400px;
+      margin-right: 30px;
       margin-bottom: 0;
       .fontsize(60px);
 
@@ -237,7 +268,7 @@
   padding: 21px 25px 46px;
 
   @media (min-width: @tablet-width) {
-    padding: 43px 40px 62px;
+    padding: 9px 40px 62px;
   }
 
   @media (min-width: @desktop-width) {
