--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -26,7 +26,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
     .circle(50px);
+    padding-top: 3px;
   }
 
   &--current {
@@ -40,12 +42,14 @@
   .fontsize(20px);
   color: @basic-blue-light;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: fade(@basic-blue-light, 60%);
   }
 
   &--current {
-    &:hover {
+    &:hover,
+    &:focus {
       color: @basic-blue-light;
     }
   }
@@ -61,7 +65,7 @@
 
   @media (min-width: @tablet-width) {
     box-sizing: border-box;
-    padding: 40px 35px;
+    padding: 10px 19px 10px;
   }
 }
 
@@ -82,10 +86,13 @@
 
   &--previous {
     box-sizing: border-box;
-    border-right: 1px solid @basic-steelblue;
 
     &::before {
       border-right: 10px solid @special-blue-dark;
+    }
+
+    @media (max-width: @mobile-width-only) {
+      border-right: 1px solid @basic-steelblue;
     }
   }
 
