Makes everything PP and adds interactive states

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -10,7 +10,7 @@
 
   @media (min-width: @desktop-width) {
     grid-area: catalog;
-    margin-bottom: 66px;
+    margin-bottom: 54px;
   }
 }
 
@@ -73,6 +73,14 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 73px;
+    width: 94%;
+    margin-bottom: 72px;
+
+    &::before {
+      left: -16px;
+      width: 27px;
+      height: 27px;
+      margin-right: 7px;
+    }
   }
 }
