--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -39,15 +39,27 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 122px 60px 57px;
+    padding: 117px 120px 52px 60px;
   }
 }
 
 .filter-country__title {
+  position: relative;
   display: inline-block;
   box-sizing: border-box;
   width: 240px;
   padding: 0 14px 0 27px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 0;
+    display: block;
+    width: 15px;
+    height: 10px;
+    background-color: @red;
+  }
 
   @media (min-width: @tablet-width) {
     display: none;
@@ -55,7 +67,15 @@
 
   @media (min-width: @desktop-width) {
     display: inline-block;
-    padding: 5px 30px 0 65px;
+    width: 343px;
+    padding: 0 30px 0 65px;
+
+    &::before {
+      top: -1px;
+      left: 20px;
+      width: 23px;
+      height: 16px;
+    }
   }
 }
 
@@ -123,6 +143,10 @@
     margin-right: 28px;
     padding-top: 5px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 32px;
+  }
 }
 
 .filter-country__tab-link {
@@ -156,6 +180,10 @@
   &::after {
     display: block;
   }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
 }
 
 .filter-country__button-text {
@@ -180,7 +208,9 @@
 }
 
 .filter-country--open .filter-country__button-text--collapse {
-  display: inline;
+  @media (min-width: @tablet-width) {
+    display: inline;
+  }
 }
 
 // Menu
@@ -235,7 +265,11 @@
   }
 
   @media (min-width: @desktop-width) {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: 253px 254px 252px 242px 254px;
+    grid-template-rows: minmax(600px, min-content) minmax(450px, min-content) minmax(398px, min-content) minmax(422px, min-content) minmax(222px, min-content);
+    grid-row-gap: 50px;
+    width: 1255px;
+    margin-bottom: 65px;
   }
 }
 
@@ -255,7 +289,7 @@
 
 .filter-country__first-letter {
   position: relative;
-  padding: 13px 7px 10px 13px;
+  padding: 14px 12px 12px 14px;
   font-weight: 500;
   .fontsize(14px);
   text-align: center;
@@ -286,6 +320,7 @@
   }
 
   @media (min-width: @tablet-width) {
+    padding: 12px 3px 11px 8px;
     .fontsize(60px);
     color: fade(@basic-blue-light, 30%);
     background-color: transparent;
@@ -327,7 +362,7 @@
 
   @media (min-width: @desktop-width) {
     display: block;
-    padding: 0 35px 51px 35px;
+    padding: 0 27px 0 35px;
   }
 
   &--show {
@@ -408,6 +443,12 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 42px;
+    width: 100%;
+    padding: 33px 42px 38px;
+
+    &::before {
+      left: -6px;
+      margin-right: 11px;
+    }
   }
 }
