--- a/source/less/blocks/level-badge.less
+++ b/source/less/blocks/level-badge.less
@@ -101,14 +101,18 @@
   top: 13px;
   left: -15px;
 
-  @media (max-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     top: 15px;
     left: 2px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 0;
   }
 }
 
 .level-badge--traveler-card .level-badge__label {
-  @media (max-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     top: 9px;
     left: 1px;
     border-color: fade(@black, 10%);
