--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -67,6 +67,11 @@
     box-sizing: border-box;
     padding: 10px 19px 10px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 96%;
+    padding: 10px 17px 10px 8px;
+  }
 }
 
 .pagination__control {
