Adds focus state

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -25,7 +25,8 @@
   align-items: center;
   color: @basic-blue-other;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: @special-yellow-dark;
   }
 
@@ -60,7 +61,8 @@
   fill: @basic-yellow;
 }
 
-.contacts__link:hover .contacts__icon {
+.contacts__link:hover .contacts__icon,
+.contacts__link:focus .contacts__icon {
   fill: @special-yellow-dark;
 }
 
