--- a/source/less/blocks/descriptions.less
+++ b/source/less/blocks/descriptions.less
@@ -157,12 +157,12 @@
   border-radius: 4px;
   resize: none;
 
-  &:hover {
+  &:hover,
+  &:focus {
     border-color: @special-border-blue-fade;
   }
 
-  &:active,
-  &:focus {
+  &:active {
     color: @special-grey;
     border-color: @black;
   }
