--- a/source/less/blocks/number-input.less
+++ b/source/less/blocks/number-input.less
@@ -33,7 +33,8 @@
   }
 }
 
-.number-input:hover .number-input__button {
+.number-input:hover .number-input__button,
+.number-input:focus .number-input__button {
   border-color: @special-border-blue-fade;
 }
 
@@ -67,7 +68,8 @@
   }
 }
 
-.number-input:hover .number-input__input {
+.number-input:hover .number-input__input,
+.number-input:focus-within .number-input__input {
   border-color: @special-border-blue-fade;
 }
 
