--- a/source/less/blocks/plans-list.less
+++ b/source/less/blocks/plans-list.less
@@ -159,7 +159,8 @@
   text-transform: uppercase;
   color: fade(@black, 30%);
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: fade(@black, 60%);
   }
 
