--- a/source/less/blocks/user-buttons.less
+++ b/source/less/blocks/user-buttons.less
@@ -12,7 +12,8 @@
   &--phone {
     background-color: @special-orange;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: @special-orange-dark;
     }
 
@@ -28,7 +29,8 @@
   &--email {
     background-color: @special-yellow-dark;
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: @special-orange;
     }
 
