--- a/source/less/blocks/calendar.less
+++ b/source/less/blocks/calendar.less
@@ -103,7 +103,8 @@
   background-color: @basic-steelblue;
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: @white;
     background-color: @basic-blue-light;
   }
@@ -120,7 +121,8 @@
     border: 1px solid @special-grey-border;
   }
 
-  &:hover::before {
+  &:hover::before,
+  &:focus::before {
     z-index: @z-index-pseudo-hover;
     border-width: 2px;
     border-color: @special-red-saturated;
@@ -131,7 +133,8 @@
     padding: 25px 29px 26px;
     .fontsize(18px);
 
-    &:hover::before {
+    &:hover::before,
+    &:focus::before {
       border-width: 4px;
     }
   }
@@ -150,12 +153,14 @@
     background-color: @white;
     cursor: default;
 
-    &:hover {
+    &:hover,
+    &:focus {
       color: fade(@special-grey, 30%);
       background-color: @white;
     }
 
-    &:hover::before {
+    &:hover::before,
+    &:focus::before {
       border-width: 1px;
       border-color: @special-grey-border;
     }
