--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -77,7 +77,8 @@
   text-decoration: underline;
   color: @basic-yellow;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: @special-orange;
   }
 
