--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -79,7 +79,8 @@
   border: 0;
   border-radius: 0 0 20px 20px;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: @special-blue-light;
   }
 
