--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -120,7 +120,8 @@
   }
 }
 
-.rates__link:hover .rates__icon {
+.rates__link:hover .rates__icon,
+.rates__link:focus .rates__icon {
   opacity: 0.7;
 }
 
