--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -41,6 +41,7 @@
 @special-grey-border: #CBCED9;
 @special-grey-border-other: #D6D9E6;
 @special-grey-border-dark: #E1E3E9;
+@special-grey-ui: #CCCCCC;
 // Assorted
 @special-pink: #F9EAEA;
 @special-pink-saturated: #F9D8D8;
