--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,4 +1,5 @@
 .page-header {
+  min-height: 73px;
   background-image: url("../../img/backgrounds/globe-back-mobile.jpg");
   background-repeat: no-repeat;
   background-color: @basic-blue;
