Adds z-indexes for companion card and companion card on hover

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -71,6 +71,8 @@
 // Index page
 @z-index-promo: 3;
 @z-index-about-rectangle: -1;
+@z-index-companion-card: 1;
+@z-index-companion-card-hover: 2;
 @z-index-address-container: 2;
 @z-index-address-map-container: 1;
 // Form page
