--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -92,8 +92,27 @@
     padding: 19px;
     border: 3px solid @basic-blue-other;
 
+    &:hover,
+    &:focus {
+      color: @white;
+      background-color: @basic-blue-other;
+    }
+
+    &:active {
+      color: fade(@white, 30%);
+    }
+
     &::after {
       right: 21px;
+    }
+
+    &:hover::after,
+    &:focus::after {
+      border-left-color: @white;
+    }
+
+    &:active::after {
+      border-left-color: fade(@white, 30%);
     }
 
     @media (min-width: @tablet-width) {
