--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -74,13 +74,21 @@
   &::after {
     content: "";
     position: absolute;
-    top: -11px;
+    top: -13px;
     left: 25px;
     display: block;
     width: 35px;
     height: 24px;
-    background-color: red;
+    background-image: url("../../img/flags/flags-sprite.png");
+    background-size: 155px auto;
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/flags/flags-sprite@2x.png");
+      background-size: 155px auto;
+    }
   }
+
 
   @media (min-width: @tablet-width) {
     margin-bottom: 5px;
@@ -100,6 +108,24 @@
     &::after {
       top: 23px;
       right: -34px;
+    }
+  }
+
+  &--thailand {
+    &::after {
+      background-position: -80px 0;
+    }
+  }
+
+  &--france {
+    &::after {
+      background-position: -120px -28px;
+    }
+  }
+
+  &--czech {
+    &::after {
+      background-position: -40px -28px;
     }
   }
 }
