Fixes selector name

--- a/source/less/blocks/flags-list.less
+++ b/source/less/blocks/flags-list.less
@@ -19,6 +19,6 @@
   display: block;
 }
 
-.flags-list__flag:hover + .flags-list__tooltip {
+.flags-list__flag-container:hover + .flags-list__tooltip {
   display: block;
 }
