--- a/source/less/blocks/transport-list.less
+++ b/source/less/blocks/transport-list.less
@@ -54,7 +54,6 @@
   }
 }
 
-.transport-list__icon:hover + .transport-list__tooltip,
-.transport-list__icon:focus + .transport-list__tooltip {
+.transport-list__icon:hover + .transport-list__tooltip {
   display: block;
 }
