--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -20,6 +20,11 @@
   background-position: 100% 0;
   background-repeat: no-repeat;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/backgrounds/rates@2x.png");
+    background-size: 100px 100px;
+  }
+
   @media (min-width: @tablet-width) {
     margin-bottom: 32px;
     padding: 0;
