--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -67,6 +67,7 @@
 @z-index-menu: 5;
 @z-index-menu-toggle: 4;
 @z-index-menu-nojs-user-buttons: 3;
+@z-index-user-buttons-scroll: 2;
 @z-index-top-bar: 6;
 // Index page
 @z-index-promo: 3;
