Minor fixes to prevent wonkiness on widths between 320px and 768px

--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -14,6 +14,7 @@
 }
 
 .rates__title {
+  min-height: 72px;
   margin-bottom: 25px;
   padding: 16px 110px 15px 25px;
   background-image: url("../../img/backgrounds/rates.png");
