--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -40,6 +40,7 @@
 .promo__slogan {
   min-height: 120px;
   margin: 0 0 263px;
+  padding: 0 25px;
   font-weight: 700;
   font-size: 36px;
   line-height: 40px;
