Reworks top bar and its contents positioning for different states

--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -31,7 +31,7 @@
     background-color: @white;
 
     @media (min-width: @tablet-width) {
-      padding-top: 185px;
+      padding-top: 135px;
       padding-bottom: 82px;
     }
 
@@ -75,11 +75,10 @@
 
   @media (min-width: @tablet-width) {
     top: 50px;
-    right: -19px;
+    right: -13%;
     align-self: flex-start;
+    margin: 0 auto;
     order: 1;
-    margin-left: 50%;
-    margin-right: 50%;
   }
 
   @media (min-width: @desktop-width) {
@@ -102,7 +101,7 @@
 
   @media (min-width: @tablet-width) {
     top: 50px;
-    right: -18px;
+    right: 50%;
   }
 }
 
@@ -197,9 +196,8 @@
   top: 422px;
 
   @media (min-width: @tablet-width) {
-    position: fixed;
     top: 40px;
-    right: 41px;
+    right: 16px;
     order: 2;
   }
 
@@ -216,6 +214,7 @@
 
   @media (min-width: @tablet-width) {
     display: grid;
+    top: -95px;
   }
 }
 
@@ -225,7 +224,7 @@
   padding: 76px 0 29px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 93px;
+    padding-top: 106px;
     padding-bottom: 82px;
   }
 
